2-june-Created_qr_code_generator

--- a/index.html
+++ b/index.html
@@ -13,3 +13,8 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- 
+  Accordion app : 
+  ->using html and css and bootstrap created the 
+ -->
